<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#82BED9">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/raffle_nav_host"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="300dp"
            app:navGraph="@navigation/raffle_navigation"
            app:defaultNavHost="true" />

        <ImageView
            android:id="@+id/raffleImage"
            android:layout_width="141dp"
            android:layout_height="69dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="40dp"
            android:visibility="visible"
            android:src="@drawable/raffle"
            tools:src="@drawable/raffle" />

        <TextView
            android:id="@+id/raffleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="187dp"
            android:layout_marginTop="121dp"
            android:text="@string/raffleTitle"
            android:textStyle="italic"
            android:textColor="@color/design_default_color_surface"
            android:textSize="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_participate_raffle"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participate_raffle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:visibility="visible"
            android:layout_below="@id/raffle_nav_host"
            android:textSize="25dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_check_number"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_participate_raffle"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:textSize="24dp"
            android:text="@string/check_number_raffle" />

        <!-- CUPÓN -->
        <ImageView
            android:id="@+id/raffle_frag2_winner"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_below="@id/button_participate_raffle"
            android:src="@drawable/coupon"
            android:visibility="invisible"
            tools:src="@drawable/coupon" />

        <TextView
            android:id="@+id/raffle_coupon_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="220dp"
            android:textSize="25dp"
            android:layout_below="@id/button_participate_raffle"/>


        <TextView
            android:id="@+id/separador"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="70dp"
            android:background="#000000"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_back_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:textSize="15dp"
            android:text="@string/button_back_to_event_selected"
            style="?android:attr/buttonBarButtonStyle" />

    </RelativeLayout>
</layout>
