<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="eventViewModel"
            type="com.example.expomanager.EventViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#82BED9"
        tools:context=".EventInfoActivity">

        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="75dp"
            android:text="@string/event_text"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="216dp"
            android:layout_height="157dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="166dp"
            android:layout_marginEnd="101dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Botón Descripción -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_iconDescription"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@id/eventImage"
            android:layout_marginStart="41dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:text=""
            android:backgroundTint="#4023C5"
            app:icon="@drawable/ic_description"
            app:iconTint="@android:color/white"
            app:iconSize="24dp"
            app:cornerRadius="28dp" />

        <!-- Botón Ubicación -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_iconLocation"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@id/eventImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="184dp"
            android:layout_marginTop="20dp"
            android:text=""
            android:backgroundTint="#4023C5"
            app:icon="@drawable/ic_location"
            app:iconTint="@android:color/white"
            app:iconSize="24dp"
            app:cornerRadius="28dp" />

        <!-- Botón Calendario -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_calendar"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@id/eventImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="323dp"
            android:layout_marginTop="20dp"
            android:text=""
            android:backgroundTint="#4023C5"
            app:icon="@drawable/ic_calendar_month"
            app:iconTint="@android:color/white"
            app:iconSize="24dp"
            app:cornerRadius="28dp" />

        <!-- Etiquetas -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_below="@id/button_iconDescription"
            android:text="@string/description"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_calendar"
            android:layout_marginStart="180dp"
            android:gravity="center"
            android:text="@string/location"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="323dp"
            android:layout_below="@id/button_calendar"
            android:text="@string/calendar"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />

        <!-- Contenido visible al pulsar botones -->
        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_iconDescription"
            android:layout_marginTop="35dp"
            android:layout_marginStart="30dp"
            android:layout_centerHorizontal="true"
            android:visibility="@{eventViewModel.isDescrpVisible() ? View.VISIBLE : View.INVISIBLE}"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/eventLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_calendar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:visibility="@{eventViewModel.isLoctVisible() ? View.VISIBLE : View.INVISIBLE}"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_iconLocation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="125dp"
            android:visibility="@{eventViewModel.isDateVisible() ? View.VISIBLE : View.INVISIBLE}"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@color/black"/>

        <!-- Separador -->
        <TextView
            android:id="@+id/separador"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="70dp"
            android:background="#000000"
            android:visibility="visible" />

        <!-- Botón volver -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back_events"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="26dp"
            android:layout_marginBottom="13dp"
            android:text="@string/button_back_to_events"
            android:textSize="13sp"
            android:backgroundTint="#4023C5"
            android:textColor="@android:color/white"
            app:cornerRadius="12dp" />

        <!-- Botón comprar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_buy_tickets"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="13dp"
            android:text="@string/button_buy_tickets"
            android:textSize="13sp"
            android:backgroundTint="#4023C5"
            android:textColor="@android:color/white"
            app:cornerRadius="12dp" />

    </RelativeLayout>
</layout>
